--- a/Web/Views/Bitacora/Details.cshtml
+++ b/Web/Views/Bitacora/Details.cshtml
@@ -377,10 +377,11 @@
                 </div>
 
                 <div class="card-footer">
-                    
-                        @*<button style="float:right" class="btn btn-primary" onclick="recuperar(@Model.IdBitacora)">Recuperar</button>*@
-                   
-
+                    @*
+                        <button style="float:right" class="btn btn-primary" onclick="recuperar(@Model.IdBitacora)">
+                            Recuperar
+                        </button>
+                    *@
 
 
                 </div>
