--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -50,7 +50,7 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <!-- User image -->
-                <li class="user-header bg-primary">
+                <li class="user-header bg-gradient-gray-dark">
                     <!--<img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">-->
                     @if (UsuarioLogueado != null)
                     {
@@ -85,8 +85,8 @@
 
                 <!-- Menu Footer-->
                 <li class="user-footer">
-                    <a href="@Url.Action("UserProfile","Usuario")" class="btn btn-default btn-flat">Perfil</a>
-                    <a href="@Url.Action("Logout","Login")" class="btn btn-default btn-flat float-right">Salir</a>
+                    <a href="@Url.Action("UserProfile","Usuario")" class="btn btn-info btn-flat">Perfil</a>
+                    <a href="@Url.Action("Logout","Login")" class="btn btn-danger btn-flat float-right">Salir</a>
                 </li>
             </ul>
         </li>
