--- a/Web/Views/CorreoEmisor/Edit.cshtml
+++ b/Web/Views/CorreoEmisor/Edit.cshtml
@@ -2,6 +2,22 @@
 
 @{ ViewBag.Title = "Editar Correo"; }
 
+
+
+<style>
+    body .input-eye-icon {
+        float: right;
+        margin-right: 0.6rem;
+        margin-top: -1.7rem;
+        position: relative;
+        z-index: 2;
+    }
+
+        body .input-eye-icon:hover {
+            cursor: pointer;
+        }
+</style>
+
 @*@{ string idValor = Convert.ToString(ViewBag.ElId);}*@
 
 <!-- Content Header (Page header) -->
@@ -35,49 +51,50 @@
                 @using (Html.BeginForm("Edit", "CorreoEmisor", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
-                <form>
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.Id)
-                    @Html.HiddenFor(model => model.Estado)
-                    <div class="row text-left">
-                        <div class="col-md-12">
-                            <div class="form-group row">
-                                <strong class="text-danger">*</strong>
-                                @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-8">
-                                    @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
+                    <form>
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.Id)
+                        @Html.HiddenFor(model => model.Estado)
+                        <div class="row text-left">
+                            <div class="col-md-12">
+                                <div class="form-group row">
+                                    <strong class="text-danger">*</strong>
+                                    @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-8">
+                                        @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="form-group row">
-                                <strong class="text-danger">*</strong>
-                                @Html.LabelFor(model => model.Clave, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-8">
-                                    @Html.EditorFor(model => model.Clave, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Clave, "", new { @class = "text-danger" })
+                                <div class="form-group row">
+                                    <strong class="text-danger">*</strong>
+                                    @Html.LabelFor(model => model.Clave, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-8">
+                                        @Html.EditorFor(model => model.Clave, new { htmlAttributes = new { @class = "form-control" } })
+                                        <small><i id="eyePass" class="far fa-eye input-eye-icon"></i></small>
+                                        @Html.ValidationMessageFor(model => model.Clave, "", new { @class = "text-danger" })
+                                    </div>
                                 </div>
-                            </div>
 
-                            @*@if (Model.Estado)
-                {*@
-                            @*<div class="form-group">
-                    <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
-                        @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
-                        <label class="custom-control-label" for="customSwitch3">Estado</label>
-                    </div>
-                </div>*@
-                            @*}
-                else
-                {
-                    <span class="right badge-pill badge-warning">La categoría de este puesto está desactivada.</span>
-                }*@
-                            <div class="modal-footer justify-content-end">
-                                <button type="submit" class="btn btn-success">Guardar</button>
+                                @*@if (Model.Estado)
+                                    {*@
+                                @*<div class="form-group">
+                                        <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
+                                            @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
+                                            <label class="custom-control-label" for="customSwitch3">Estado</label>
+                                        </div>
+                                    </div>*@
+                                @*}
+                                    else
+                                    {
+                                        <span class="right badge-pill badge-warning">La categoría de este puesto está desactivada.</span>
+                                    }*@
+                                <div class="modal-footer justify-content-end">
+                                    <button type="submit" class="btn btn-success">Guardar</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
                 }
             </div>
         </div>
@@ -93,12 +110,33 @@
     <script>
         //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
         $(document).ready(function () {
+            //ocultar clave al abrir
+            var password = document.getElementById("Clave");
+            password.type = "password";
+
+
+
             $("#mantenimientos").addClass('active');
             $("#menupuestos").addClass('active');
             $("#elCombo").ready(function () {
                 document.getElementById("elCombo").setAttribute()
             });
         });</script>
+
+
+    <script>
+        //Ver contrasena Clave
+        $("#eyePass").click(function () {
+            var password = document.getElementById("Clave");
+            if (password.type === "password") {
+                password.type = "text";
+                $("#eyePass").toggleClass("fa-eye fa-eye-slash");
+            } else {
+                password.type = "password";
+                $("#eyePass").toggleClass("fa-eye-slash fa-eye");
+            }
+        });
+    </script>
 
     <script>
         $('#checkEstado').change(function () {
