--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -48,9 +48,9 @@
                             @oUsuario1.NombreCompleto } }
                 </span>
             </a>
-            <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+            <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right" style="border-radius: 0px 0px 20px 20px">
                 <!-- User image -->
-                <li class="user-header bg-gradient-gray-dark">
+                <li class="user-header bg-gradient-gray-dark" >
                     <!--<img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">-->
                     @if (UsuarioLogueado != null)
                     {
@@ -66,6 +66,7 @@
 
 
 
+                    <br />
                     <br />
                     <p>
 
@@ -84,9 +85,9 @@
                 </li>
 
                 <!-- Menu Footer-->
-                <li class="user-footer">
-                    <a href="@Url.Action("UserProfile","Usuario")" class="btn btn-info btn-flat">Perfil</a>
-                    <a href="@Url.Action("Logout","Login")" class="btn btn-danger btn-flat float-right">Salir</a>
+                <li class="user-footer" style="border-radius: 0px 0px 20px 20px">
+                    <a href="@Url.Action("UserProfile","Usuario")" class="btn btn-info btn-flat" style="border-radius: 0px 0px 0px 10px">Perfil</a>
+                    <a href="@Url.Action("Logout","Login")" class="btn btn-danger btn-flat float-right" style="border-radius: 0px 0px 10px 00px">Salir</a>
                 </li>
             </ul>
         </li>
