Cambio de diseño en cambios de clave

--- a/Web/Views/Reporte/ReporteSesion.cshtml
+++ b/Web/Views/Reporte/ReporteSesion.cshtml
@@ -39,7 +39,7 @@
                             <div class="col">
                                 <p class="tooltip--right float-left" data-tooltip="Genera un reporte de las sesiones de los usuarios">
                                     <button class="btn btn-info" onclick="Descargar()">
-                                        <i class="fas fa-eye"></i> Mostrar Reporte
+                                         Generar Reporte
                                     </button>
                                 </p>
                             </div>
