--- a/Web/Views/Reporte/ReporteServicios.cshtml
+++ b/Web/Views/Reporte/ReporteServicios.cshtml
@@ -27,7 +27,12 @@
     <center>
         <div class="card card-default mt-3 col-md-8">
             <div class="card-body p-3 col-md-12">
-                <div class="card-header text-danger text-left border-bottom-0">
+                <div class="card-header text-danger text-left mb-5">
+                    <div style="float: right; cursor: pointer">
+                        <button class="btn" type="button" id="btnTooltip">
+                            <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                        </button>
+                    </div>
                     <p>* Campos requeridos</p>
                 </div>
                 <div class="row text-left">
@@ -61,6 +66,24 @@
 
 
 @section scripts {
+
+    <!-- Tippy JS para tooltips-->
+    <script src="@Html.Raw("https://unpkg.com/@popperjs/core@2")"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
+
+
+    <script>
+        // With the above scripts loaded, you can call `tippy()` with a CSS
+        // selector and a `content` prop:
+        tippy('#btnTooltip', {
+            content: 'Aquí puedes mostrar un reporte con los servicios realizados por el usuario a consultar.',
+            arrow: true,
+            animation: 'scale',
+            trigger: 'click',
+        });
+    </script>
+
 
     <script>
         //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
