--- a/Web/Views/Reporte/ReporteSesion.cshtml
+++ b/Web/Views/Reporte/ReporteSesion.cshtml
@@ -31,34 +31,64 @@
 
 <center>
     <div class="card card-default mt-3 col-md-8">
+        <div class="card-header">
+            <div style="float: right; cursor: pointer">
+                <button class="btn" id="btnTooltip">
+                    <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                </button>
+            </div>
+        </div>
         <div class="card-body p-3 col-md-12">
             <div class="row text-left">
                 <div class="col-md-12">
                     <div id="container-fluid">
-                        <div class="row">
-                            <div class="col">
-                                <p class="tooltip--right float-left" data-tooltip="Genera un reporte de las sesiones de los usuarios">
-                                    <button class="btn btn-info" onclick="Descargar()">
-                                         Generar Reporte
-                                    </button>
-                                </p>
+                        <div class="row mb-4">
+                            <div class="col-md-6">
+                                <div class="col-md-12">
+                                    <!-- small box -->
+                                    <div id="box" class="small-box">
+                                        <div class="inner">
+                                            <h3 id="cantidad"></h3>
+                                            <p>Registros de acceso al sistema</p>
+                                        </div>
+                                        <div class="icon">
+                                            <i id="icono" class=""></i>
+                                        </div>
+                                        <div class="small-box-footer text-left pl-2">
+                                            <p id="comentario"></p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col text-center">
 
-                            </div>
-                            <div class="col">
-                                <p class="tooltip--left float-right" data-tooltip="Elimina permanentemente todos los registros de sesiones.">
-                                    <a class="btn btn-danger" onclick="eliminar()">
-                                        <i class="fas fa-trash mr-2"></i>
-                                        Eliminar todo
-                                    </a>
-                                </p>
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-md-12 callout callout-warning text-justify">
+                                        <div>
+                                            <h5><i class="icon fas fa-exclamation-triangle"></i> Aviso!</h5>
+                                            <p>Se recomienda eliminar los registros frecuentemente si no se necesitan para evitar la acumulación de datos innecesarios.</p>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
+
+                        <div class="row float-right">
+                            <p class="tooltip--triangle" data-tooltip="Elimina todos los registros de accesos del sistema.">
+                                <a class="btn btn-danger" onclick="eliminar()">
+                                    <i class="fas fa-trash mr-2"></i>
+                                    Eliminar todo
+                                </a>
+                            </p>
+                            <p class="tooltip--triangle" data-tooltip="Abre una nueva ventana mostrando el reporte">
+                                <button class="btn btn-info ml-2" onclick="Descargar()">
+                                    Generar Reporte
+                                </button>
+                            </p>
+                        </div>
+
                     </div>
-
-
-
                 </div>
             </div>
             @*<iframe id="frmReporte" width="100%" height="550px" frameborder="0" scrolling="no"></iframe>*@
@@ -82,6 +112,24 @@
     @Scripts.Render("~/bundles/jqueryajax")
 
 
+    <!-- Tippy JS para tooltips-->
+    <script src="@Html.Raw("https://unpkg.com/@popperjs/core@2")"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
+
+
+    <script>
+        // With the above scripts loaded, you can call `tippy()` with a CSS
+        // selector and a `content` prop:
+        tippy('#btnTooltip', {
+            content: 'Aquí puedes mostrar un reporte o eliminar todos los registros de inicio de sesión que los usuarios han realizado, mediante sus respectivos botones.',
+            arrow: true,
+            animation: 'scale',
+            trigger: 'click',
+        });
+    </script>
+
+
     <script>
 
         function Descargar() {
@@ -99,11 +147,34 @@
 
         $(document).ready(function () {
 
+
+
+            var total = '@ViewBag.Total';
+            $('#cantidad').text(total);
+            if (total >= 0 && total <= 50) {
+                $('#box').addClass('bg-success');
+                $('#icono').addClass('fas fa-thumbs-up');
+                $('#comentario').text('Ninguna acción recomendada.');
+            }
+
+            if (total >= 51 && total <= 100) {
+                $('#box').addClass('bg-warning');
+                $('#icono').addClass('fas fa-exclamation-triangle');
+                $('#comentario').text('Limpieza recomendada.');
+            }
+
+            if (total >= 101) {
+                $('#box').addClass('bg-danger');
+                $('#icono').addClass('fas fa-exclamation-triangle');
+                $('#comentario').text('Limpieza recomendada.');
+            }
+
+
             //Mostrar();
                 // Recibe los parámetros del Controller
                 var option = '@TempData["Action"]'
                 var message = '@TempData["Message"]'
-            debugger;
+
 
                  if (option == 'D') {
                      Swal.fire('Éxito!',
