--- a/Web/Views/Reporte/ReporteUsuariosIngresados.cshtml
+++ b/Web/Views/Reporte/ReporteUsuariosIngresados.cshtml
@@ -28,6 +28,13 @@
 
     <center>
         <div class="card card-default mt-3 col-md-8">
+            <div class="card-header">
+                <div style="float: right; cursor: pointer">
+                    <button class="btn" type="button" id="btnTooltip">
+                        <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                    </button>
+                </div>
+            </div>
             <div class="card-body p-3 col-md-12">
                 <div class="card-header text-danger text-left border-bottom-0">
                     <p>* Campos requeridos</p>
@@ -79,6 +86,27 @@
 
 @section scripts {
 
+    <!-- Tippy JS para tooltips-->
+    <script src="@Html.Raw("https://unpkg.com/@popperjs/core@2")"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
+
+
+    <script>
+        // With the above scripts loaded, you can call `tippy()` with a CSS
+        // selector and a `content` prop:
+        tippy('#btnTooltip', {
+            content: 'Aquí puedes mostrar un reporte de los usuarios que han sido registrados al sistema mediante un rango de fechas.',
+            arrow: true,
+            animation: 'scale',
+            trigger: 'click',
+        });
+    </script>
+
+
+
+
+
 
     <script>
 
@@ -88,7 +116,7 @@
         $('#fechaFin').on('change', function () {
             validar();
         })
-        
+
         function validar() {
             var inicio = $('#fechaInicio').val();
             var fin = $('#fechaFin').val();
@@ -118,8 +146,8 @@
 
 
             $("#btnAceptar").prop('disabled', false);
-            
- 
+
+
         }
 
 
